--- a/IMDBLib.csproj
+++ b/IMDBLib.csproj
@@ -18,4 +18,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+    <Folder Include="Models\Views\" />
+  </ItemGroup>
+
 </Project>
